--- a/style/style.css
+++ b/style/style.css
@@ -301,6 +301,24 @@ li {
   text-align: justify;
 }
 
+/* FOOTER */
+
+.footer {
+  background-color: var(--color-black);
+  color: var(--color-white);
+  padding-top: 40px;
+  padding-bottom: 20px;
+}
+
+.footer__rights {
+  text-align: center;
+  padding-bottom: 20px;
+}
+.footer__rights-action:hover {
+  color: var(--hover);
+  transition: .6s;
+}
+
 /* MEDIA-SCREENS */
 
 @media screen and (min-width: 768px) {
