--- a/style/style.css
+++ b/style/style.css
@@ -193,6 +193,10 @@ li {
   padding-bottom: 50px;
 }
 
+.location__map {
+  width: 100%;
+  height: 500px;
+}
 .location__description {
   padding-top: 20px;
   text-align: justify;
@@ -240,6 +244,11 @@ li {
   padding: 20px;
   display: flex;
   flex-direction: column;
+}
+
+.about__item-title {
+  text-align: center;
+  padding-bottom: 20px;
 }
 
 .earth {
@@ -293,6 +302,11 @@ li {
   align-items: center;
   padding: 20px;
 }
+
+.mate__name {
+  padding-bottom: 20px;
+}
+
 .mate__photo {
   max-width: 50%;
 }
